styles/form.css
:root {
    --primary-font-family: 'Poppins', sans-serif;
    --primary-dark-color: #333;
    --secondary-dark-color: #535353;
    --primary-grey-color: #d3d3d3;
    --primary-light-color: #fff;
    --primary-yellow-color: yellow;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--primary-font-family);
    display: grid;
    height: 100vh;
    grid-template: auto 1fr auto / 1fr;
    line-height: 1.9rem;
}

header {
    background-color: var(--secondary-dark-color);
    color: var(--primary-light-color);
    text-align: center;
}

.heading {
    padding: 2rem 1rem;
}

main {
    grid-column: 1 / 3;
    padding: 1rem;
    margin: 0 auto;
}

footer {
    grid-column: 1 / 4;
    background-color: var(--primary-dark-color);
    color: #fff;
    padding: 1rem;
    text-align: center;
}

#lastModified {
    font-size: 0.9rem;
    color: var(--primary-yellow-color);
}

form {
    max-width: 600px;
    margin: 0 auto;
    padding: 1rem;
    background-color: var(--primary-grey-color);
    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 0.4rem;
}

fieldset {
    border: none;
}

fieldset label {
    margin-bottom: -0.5rem
}

label{
    display: block;
    margin: 0.5rem 0.6rem 1.4rem 0;
}

.review-label {
    margin-top: 1.5rem;
}

textarea {
    display: block;
    padding: 0.5rem;
    font-size: 1rem;
    border: 1px solid var(--primary-dark-color);
    border-radius: 0.4rem;
    width: 100%;
}

input[type="checkbox"] {
    width: 1rem;
    height: 1rem;
    margin-right: 10px;
}

select, input[type="text"], input[type="date"] {
    display: block;
    height: 44px;
    width: 100%;
    padding: 0.5rem;
    font-size: 1rem;
    border: 1px solid var(--primary-dark-color);
    border-radius: 0.4rem;
}

input[type="submit"] {
    display: block;
    width: 97%;
    padding: 0.5rem;
    font-size: 1rem;
    border: none;
    border-radius: 0.4rem;
    background-color: var(--primary-dark-color);
    color: var(--primary-light-color);
    cursor: pointer;
}

input[type="submit"]:hover {
    background-color: var(--primary-yellow-color);
    color: var(--primary-dark-color);
    transition: all 0.3s ease-in-out;
}

label span {
    display: inline;
    font-size: 0.8rem;
    font-style: italic;
}

small {
    color: #4949fa;
    font-size: 0.7rem;
}

/* stars */
input[type="radio"] {
	display: none;
	position: relative;
	caret-color: rgba(0, 0, 0, 0);
}

.stars {
	display: flex;
	flex-direction: row-reverse;
	justify-content: left;
    margin: -0.3rem 0 0 -0.3rem;
}

.stars > label {
	color: rgb(189, 172, 78);
	width: 20px;
	height: 20px;
	font-size: 2rem;
	margin-left: 5px;
	display: flex;
	align-items: center;
	caret-color: rgba(0, 0, 0, 0); /* remove blinking cursor*/
}

.stars > label:hover {
	color: #000;
}

.stars > label::before {
	content: "\2606";
}

.stars input:checked ~ label::before {
	content: "\2605";
}

.ref{
    font-size: 0.7rem;
    color: var(--primary-dark-color);
    margin: -2rem 1rem 1rem 0;
}

/* submission page styles */
.review-page {
    margin-top: 8rem;
}

.review-page h2 {
    color: rgb(2, 106, 2);
}

/* responsive styles */
@media screen and (max-width: 768px) {
    form {
        max-width: 400px;
    }
}

